use sealed class and pattern matching approach for BitvavoResponse